--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
 
-    <!-- Generated using https://realfavicongenerator.net/ -->
+    <!-- Generated using https://favicon.io/ -->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png" />
