--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -15,18 +15,23 @@
     <meta name="msapplication-config" content="/assets/browserconfig.xml" />
     <meta name="theme-color" content="#ffffff" />
 
-    <title>io Game</title>
-    <style>
-      body,
-      html {
-        height: 100%;
-      }
-      * {
-        box-sizing: border-box;
-      }
-    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link type="text/css" rel="stylesheet" href="/assets/styles.css">
+
+    <title>Circlez.io Game</title>
   </head>
   <body>
-    <div id="container"></div>
+    <main>
+
+      <div id="start-game-modal" class="z-depth-3">
+        <h1>Circlez io Game</h1>
+        <blockquote class="flow-text">
+          Yet another <a href="https://agar.io">agar.io</a> clone!
+        </blockquote>
+        <input type="text" name="player-name" id="player-name" placeholder="Player Name">
+        <button class="waves-effect waves-light btn-large mt-2">Play!</button>
+      </div>
+    </main>
+    <footer>© 2020 Copyright Text</footer>
   </body>
 </html>
