Adds joining game

--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -24,13 +24,15 @@
     <main>
 
       <div id="start-game-modal" class="z-depth-3">
-        <h1>Circlez io Game</h1>
+        <h1 class="flow-text">Circlez io Game</h1>
         <blockquote class="flow-text">
           Yet another <a href="https://agar.io">agar.io</a> clone!
         </blockquote>
         <input type="text" name="player-name" id="player-name" placeholder="Player Name">
-        <button class="waves-effect waves-light btn-large mt-2">Play!</button>
+        <button class="waves-effect waves-light btn-large mt-2" id="play-button">Play!</button>
       </div>
+
+      <canvas id="game-canvas"></canvas>
     </main>
     <footer>© 2020 Copyright Text</footer>
   </body>
