--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -22,14 +22,13 @@
   </head>
   <body>
     <main>
-      <canvas id="game-canvas"></canvas>
-
-      <div id="start-game-modal" class="z-depth-3 hidden">
-        <h1 class="flow-text">Circlez io Game</h1>
+      <div id="start-game-modal" class="z-depth-3">
+        <h1 class="flow-text" id="modal-title">Circlez io Game</h1>
         <blockquote class="flow-text">Yet another <a href="https://agar.io">agar.io</a> clone!</blockquote>
         <input type="text" name="player-name" id="player-name" placeholder="Player Name" />
         <button class="waves-effect waves-light btn-large mt-2" id="play-button">Play!</button>
       </div>
+      <canvas id="game-canvas"></canvas>
     </main>
     <footer>© 2020 Copyright Text</footer>
   </body>
