--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
+    <!-- <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" /> -->
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
 
     <!-- Generated using https://favicon.io/ -->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png" />
