More ui refactoring, now remembers previous name

--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -27,7 +27,10 @@
       <div id="start-game-modal" class="z-depth-3">
         <h1 class="flow-text" id="modal-title">Circlez io Game</h1>
         <blockquote class="flow-text">Yet another <a href="https://agar.io">agar.io</a> clone!</blockquote>
-        <input type="text" name="player-name" id="player-name" placeholder="Player Name" />
+        <div class="input-field col s6">
+          <input placeholder="Player Name" id="player-name" type="text" class="validate" maxlength="12" />
+          <label for="player-name" class="hidden">Player Name</label>
+        </div>
         <button class="waves-effect waves-light btn-large mt-2" id="play-button">Play!</button>
       </div>
     </main>
