Shows who killed you

--- a/src/client/public/index.html
+++ b/src/client/public/index.html
@@ -26,7 +26,9 @@
       <canvas id="game-canvas"></canvas>
       <div id="start-game-modal" class="z-depth-3">
         <h1 class="flow-text" id="modal-title">Circlez io Game</h1>
-        <blockquote class="flow-text">Yet another <a href="https://agar.io">agar.io</a> clone!</blockquote>
+        <blockquote id="modal-secondary-text" class="flow-text">
+          Yet another <a href="https://agar.io">agar.io</a> clone!
+        </blockquote>
         <div class="input-field col s6">
           <input placeholder="Player Name" id="player-name" type="text" class="validate" maxlength="12" />
           <label for="player-name" class="hidden">Player Name</label>
